--- a/attractions.html
+++ b/attractions.html
@@ -6,14 +6,13 @@
         <title>Country Cabins at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body>
          <!-- Header -->
          <nav style="background-color: rgba(255,255,255,1)">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.png" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -69,8 +68,9 @@
         </aside>
         <div id="overlay"></div>
 
-
-    
+        <div class="background-image">
+            <img src="images/background-image.jpg" alt="">
+        </div>    
 
         <div class="overview-container">
             <h1>Area Attractions</h1>
