--- a/bookNow.html
+++ b/bookNow.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="white-background" lang="en">
+<html lang="en">
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,14 +7,13 @@
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/daterangepicker.css" type="text/css"/>
-        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
-    <body class="white-background">
+    <body>
         <!-- Header -->
         <nav style="background-color: rgba(255,255,255,1)">
             <div class="logo-title-container">
-              <a href="index.html"><img class="logo-title" src="images/icons/logo_title.png" alt=""></a>
+              <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
           </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -76,7 +75,7 @@
             <div id="step-one-left">
               <p id="step-one-p">Stay Details</p>
               <i id="step-one-circle" class="far fa-circle circle-icon"></i>
-              <i id="step-one-check" class="far fa-check-circle check-circle-icon"></i>
+              <i id="step-one-check" class="fa fa-check-circle check-circle-icon"></i>
             </div>
             <div id="step-two-left">
               <p id="step-two-p">Contact Info</p>
@@ -265,10 +264,10 @@
         </div>
 
 
-      <footer style="background-color: rgba(255,255,255,1)">
-        <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.facebook.com/sheldonrlarsonranch/" target="_blank"><img src="images/icons/facebook.svg" height="20" width="20" alt="link to our facebook page"/></a>
-        <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.instagram.com/sheldonrlarsonranch/" target="_blank"><img src="images/icons/instagram.svg" height="20" width="20" alt="link to our instagram page"/></a>
-        <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.airbnb.com/rooms/6987200?source_impression_id=p3_1561644451_CppAMA6DbxaNfKE2&s=hCtNNbnM" target="_blank"><img src="images/icons/airbnb.svg" height="20" width="20" alt="link to our airbnb page"/></a>
+      <footer>
+          <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.facebook.com/sheldonrlarsonranch/" target="_blank"><img src="images/icons/facebook.svg" height="20" width="20" alt="link to our facebook page"/></a>
+          <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.instagram.com/sheldonrlarsonranch/" target="_blank"><img src="images/icons/instagram.svg" height="20" width="20" alt="link to our instagram page"/></a>
+          <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.airbnb.com/rooms/6987200?source_impression_id=p3_1561644451_CppAMA6DbxaNfKE2&s=hCtNNbnM" target="_blank"><img src="images/icons/airbnb.svg" height="20" width="20" alt="link to our airbnb page"/></a>
       </footer>
 
         <!--JQuery and JavaScript Declarations-->
