--- a/cabinOverview.html
+++ b/cabinOverview.html
@@ -6,14 +6,13 @@
         <title>Country Cabins at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body>
          <!-- Header -->
          <nav style="background-color: rgba(255,255,255,1)">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.png" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -69,7 +68,9 @@
         </aside>
         <div id="overlay"></div>
 
-
+        <div class="background-image">
+            <img src="images/background-image.jpg" alt="">
+        </div>
     
 
         <div class="overview-container">
@@ -90,7 +91,7 @@
                         <p><i class="fas fa-bath cabin-overview-icon cabin-overview-icon-right"></i> 1</p> 
                     </div>
                     <div class="cabin-overview-text-column-right">
-                        <p><img src="images/icons/fridge_1.png" class="fridge-icon" alt="fridge icon"> Full Kitchen</p>   
+                        <p><img src="images/icons/fridge.svg" height="16" width="25" alt="fridge icon" class="fridge-icon"/> Full Kitchen</p>   
                         <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
                         <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
                     </div>
@@ -115,10 +116,10 @@
                         <div class="cabin-overview-text-column-left">
                             <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 4</p> 
                         <p><i class="fas fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 2</p> 
-                        <p><i class="fas fa-bath cabin-overview-icon cabin-overview-icon-right"></i> 1</p> 
+                        <p><i class="fas fa-shower cabin-overview-icon cabin-overview-icon-right"></i> 1</p> 
                         </div>
                         <div class="cabin-overview-text-column-right">
-                            <p><img src="images/icons/fridge_1.png" class="fridge-icon" alt="fridge icon"> Full Kitchen</p>   
+                            <p><img src="images/icons/fridge.svg" height="16" width="25" alt="fridge icon" class="fridge-icon"/> Full Kitchen</p>   
                             <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
                             <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
                         </div>
@@ -147,7 +148,7 @@
                             <p><i class="fas fa-bath cabin-overview-icon cabin-overview-icon-right"></i> 2</p> 
                         </div>
                         <div class="cabin-overview-text-column-right">
-                            <p><img src="images/icons/fridge_1.png" class="fridge-icon" alt="fridge icon"> Full Kitchens</p>   
+                            <p><img src="images/icons/fridge.svg" height="16" width="25" alt="fridge icon" class="fridge-icon"/> Full Kitchen</p>   
                             <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
                             <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
                         </div>
