--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/daterangepicker.css" type="text/css"/>
-        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body id="homepage"> 
         <!-- Header -->
         <nav>
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.png" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
