--- a/mainCabin.html
+++ b/mainCabin.html
@@ -6,14 +6,13 @@
         <title>Main Cabin at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body id="main-cabin-body">
         <!-- Header -->
         <nav style="background-color: rgba(255,255,255,1)">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.png" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -69,13 +68,17 @@
         </aside>
         <div id="overlay"></div>
 
+        <div class="background-image">
+            <img src="images/background-image.jpg" alt="">
+        </div>
+
         <div class="overview-container">
             <h1>Main Cabin</h1>
             <p>Plenty of room for the entire family in this Country Cabin rental!</p>
             <div class="cabin-overview-icon-container">
                 <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 6</p> 
                 <p><i class="fas fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 4</p>
-                <p><img src="images/icons/fridge_1.png" class="fridge-icon" alt="fridge icon"> Kitchen</p>   
+                <p><img src="images/icons/fridge.svg" height="16" width="25" alt="fridge icon" class="fridge-icon2"/> Full Kitchen</p>   
                 <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Parking</p> 
                 <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets*</p>
                 <!--
