--- a/map.html
+++ b/map.html
@@ -6,14 +6,13 @@
         <title>Nearby Attractions Map at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body id="homepage"> 
         <!-- Header -->
         <nav>
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.png" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -68,6 +67,10 @@
             </div>
         </aside>
         <div id="overlay"></div>
+
+        <div class="background-image">
+            <img src="images/background-image.jpg" alt="">
+        </div>
 
         <button type="button" id="map-howTo-open" class="map-howTo">How To Use Map</button>
         <button type="button" id="map-howTo-close" class="map-howTo">Close Explanation</button>
