--- a/mainCabin.html
+++ b/mainCabin.html
@@ -116,6 +116,7 @@
                 <a href="#main-cabin-amenities"><p>Amenities</p></a>
                 <a href="#main-cabin-information"><p>Information</p></a>
                 <a href="#main-cabin-rates"><p>Rates</p></a>
+                <a href="#main-cabin-reviews"><p>Reviews</p></a>
             </div>
 
             <div class="cabin-description-text-area">
@@ -195,6 +196,9 @@
                         <td>$1200 /week</td>
                     </tr>
                 </table>
+
+                <h2 id="main-cabin-reviews">Reviews</h2>
+                <script src="https://www.powr.io/powr.js?platform=html"></script><div class="powr-reviews reviews-page" id="84dd2cea_1565922283"></div>
 
             </div>
         </div>
