Review Page Tweak
Small tweaks to the reviews section on the mainCabin page

--- a/mainCabin.html
+++ b/mainCabin.html
@@ -81,12 +81,6 @@
                 <p><img src="images/icons/fridge.svg" height="16" width="25" alt="fridge icon" class="fridge-icon2"/> Full Kitchen</p>   
                 <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Parking</p> 
                 <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets*</p>
-                <!--
-                <div class="reviews-container">
-                    <p id="cabin-reviews">*****</p><br>
-                    <p id="cabin-reviews-count">84 Reviews</p>
-                </div>
-                -->
             </div>      
 
             
@@ -198,7 +192,7 @@
                 </table>
 
                 <h2 id="main-cabin-reviews">Reviews</h2>
-                <script src="https://www.powr.io/powr.js?platform=html"></script><div class="powr-reviews reviews-page" id="84dd2cea_1565922283"></div>
+                <script src="https://www.powr.io/powr.js?platform=html"></script><div class="powr-reviews cabin-reviews" id="84dd2cea_1565922283"></div>
 
             </div>
         </div>
