--- a/contact.html
+++ b/contact.html
@@ -77,8 +77,11 @@
             <h2>Get started on your stay with us today!</h2>
         </div>
 
-        <div class="contact-container">  
-
+        <div class="contact-container"> 
+            <div class="contact-form-container">
+                <script src="https://www.powr.io/powr.js?platform=html"></script><div class="powr-form-builder" id="7e034e49_1565934293"></div>
+            </div> 
+            <!--
             <form id="contact" action="" method="post" enctype="text/plain" onsubmit="contactUsMail(); return false;">
                 <h3>Contact Us</h3>
                 <h4>Contact us with any questions and we'll get back to you as soon as possible!</h4>
@@ -101,7 +104,7 @@
                     <button type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
                 </fieldset>
             </form>
-
+            -->
             <div class="contact-information">
                 <div>
                     <h3>Connect with us</h3>
@@ -123,10 +126,11 @@
         </footer>
 
         <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
+        
         <!--JQuery and JavaScript Declarations-->
         <script src="js/jquery.min.js"></script>
         <script src='js/main.js'></script>
-        <script src='js/contactUs.js'></script>
+        <!--<script src='js/contactUs.js'></script>-->
 
     </body>
 </html>
