attractions page update
changed the attractions page to work better with smaller screens

--- a/attractions.html
+++ b/attractions.html
@@ -86,7 +86,7 @@
                     <p>Being minutes from the world famous Arapeen trail system, you have over 350,000 acres of interconnecting, beautiful mountain trails. So from your motorcycle to side-by-side, bring your ATV an enjoy the pristine landscape Sanpete Valley has to offer.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href=""><p>Click here<br>for more<br>information</p></a>
+                    <a href=""><p>Click here for more information</p></a>
                 </div>
             </div>
 
@@ -100,7 +100,7 @@
                     <p>With the Manti-Lasal Mountain Range next door, you have some of the best hiking trails in the Rocky Mountains! From waterfalls and panoramic views to deep forest canopies, there are plenty of hiking trails for all ages and skill levels!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                        <a href=""><p>Click here<br>for more<br>information</p></a>
+                    <a href=""><p>Click here for more information</p></a>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                     <p>The cobblestone climbing of Maple Canyon is just minutes away from our cabins. Climbers from around the world come to test their skills on Maple Canyon’s unique cobblestone cliffs. With hundreds of climbs, it's easy to find a climb for everyone from novice to expert! </p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href=""><p>Click here<br>for more<br>information</p></a>
+                    <a href=""><p>Click here for more information</p></a>
                 </div>
             </div>
 
@@ -128,7 +128,7 @@
                     <p>Countless miles of untouched powder and bowls that offer some of the best backcountry mountain sledding in the state. SnoWest magazine wrote, "Boondocker’s Heaven- If there was ever a place on earth that could lay claim to that title, it would have to be Utah’s Sanpete County."</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href=""><p>Click here<br>for more<br>information</p></a>
+                    <a href=""><p>Click here for more information</p></a>
                 </div>
             </div>
 
@@ -142,7 +142,7 @@
                     <p>Have you ever rode a mountain bike over 50 miles at an altitude of nearly 10,000 feet? Skyline Drive has breathtaking views that will Expand your outlook on life. This area offers many single or multi-day adventures for you to enjoy on your bike.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                        <a href=""><p>Click here<br>for more<br>information</p></a>
+                    <a href=""><p>Click here for more information</p></a>
                 </div>
             </div>
 
@@ -153,10 +153,10 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href=""><h3>History</h3></a>
-                    <p>Sanpete’s Heritage is prevalent today with many buildings built in the 1800’s. Native American sites, pioneer homesteads, historic buildings, and cultural sites draw history and culture buffs to this area. Forbes listed neighboring town Spring City, UT as one of the top prettiest towns in America.</p>
+                    <p>Sanpete’s Heritage is prevalent today with many buildings built in the 1800’s. Native American sites, historic buildings, and cultural sites draw history and culture buffs to this area. Forbes listed neighboring town Spring City, UT as one of the top prettiest towns in America.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href=""><p>Click here<br>for more<br>information</p></a>
+                    <a href=""><p>Click here for more information</p></a>
                 </div>
             </div>
 
@@ -170,7 +170,7 @@
                     <p>Sanpete has so much to offer and see. With hundreds of thousands of acres of gorgeous mountain forests, there are more scenic, panoramic views than you can take pictures of! So make sure to clear out your phone storage so you have room for the photos!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href=""><p>Click here<br>for more<br>information</p></a>
+                    <a href=""><p>Click here for more information</p></a>
                 </div>
             </div>
 
@@ -184,7 +184,7 @@
                     <p>From state parks to boating and snowkiting, Sanpete valley is an outdoor paradise! There is something here for everyone, including a full scale replica of a nearly fully intact Columbian mammoth that was unearthed here in 1988, art museums, and many more family-fun activities!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
-                    <a href=""><p>Click here<br>for more<br>information</p></a>
+                    <a href=""><p>Click here for more information</p></a>
                 </div>
             </div>
 
