cabinOverview.html update/wedding photos
Update the cabin overview page to be more mobile friendly even though it likely won't be seen on mobile device due to the header. Also added wedding photos for the wedding section

--- a/cabinOverview.html
+++ b/cabinOverview.html
@@ -98,8 +98,8 @@
                 </div>
                 <div class="cabin-overview-cabins-price">
                     <div class="center-cabins-price">
-                        <p><span class="the-nightly-price">$129</span> /night</p><br><br>
-                        <p><span class="the-weekly-price">$775</span> /week</p><br><br>
+                        <p><span class="the-nightly-price">$129</span> /night</p>
+                        <p><span class="the-weekly-price">$775</span> /week</p>
                     </div>
                     <a href="mainCabin.html"><p>View Cabin</p></a>
                 </div>
@@ -126,8 +126,8 @@
                     </div>
                     <div class="cabin-overview-cabins-price">
                         <div class="center-cabins-price">
-                            <p><span class="the-nightly-price">$99</span> /night</p><br><br>
-                            <p><span class="the-weekly-price">$600</span> /week</p><br><br>
+                            <p><span class="the-nightly-price">$99</span> /night</p>
+                            <p><span class="the-weekly-price">$600</span> /week</p>
                         </div>
                         <a href="guestCabin.html"><p>View Cabin</p></a>
                     </div>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="cabin-overview-cabins-text">
                         <a href="mainCabin.html"><h3>Both Cabins Discount</h3></a>
-                        <p>*See individual cabin pages for more details</p>
+                        <p class="cabin-overview-extra-details">*See individual cabin pages for more details</p>
                         <p><i class="fas fa-map-marker-alt cabin-overview-icon"></i> Ephraim, UT</p>
                         <div class="cabin-overview-text-column-left">
                             <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 10</p> 
@@ -155,8 +155,8 @@
                     </div>
                     <div class="cabin-overview-cabins-price">
                         <div class="center-cabins-price">
-                            <p><span class="the-nightly-price">$200</span> /night</p><br><br>
-                            <p><span class="the-weekly-price">$1200</span> /week</p><br><br>
+                            <p><span class="the-nightly-price">$200</span> /night</p>
+                            <p><span class="the-weekly-price">$1200</span> /week</p>
                         </div>
                         <a href="mainCabin.html"><p>View Cabin</p></a>
                     </div>
