--- a/otherEvents.html
+++ b/otherEvents.html
@@ -76,7 +76,7 @@
             <div class="overview-text-container">
                 <div>
                     <h1>Weddings</h1><br>
-                    <p>Our cabins are a perfect location for your country-style wedding! </p>
+                    <p>Our cabins are a perfect location for your country-style wedding! More wedding text here... </p>
                 </div>
             </div>
 
@@ -87,14 +87,15 @@
                 <span class="cycle-prev overview-prev">&#9001;</span>
                 <span class="cycle-next overview-next">&#9002;</span>
 
-                <img class="overview-image-carousel-img" src="images/home-1.jpg" alt="">
-                <img class="overview-image-carousel-img" src="images/home-2.jpg" alt="">
-                <img class="overview-image-carousel-img" src="images/home-3.jpg" alt="">
-                <img class="overview-image-carousel-img" src="images/home-4.jpg" alt="">
+                <img class="overview-image-carousel-img" src="images/wedding_1.jpg" alt="">
+                <img class="overview-image-carousel-img" src="images/wedding_2.jpg" alt="">
+                <img class="overview-image-carousel-img" src="images/wedding_3.jpg" alt="">
+                <img class="overview-image-carousel-img" src="images/wedding_4.jpg" alt="">
+                <img class="overview-image-carousel-img" src="images/wedding_5.jpg" alt="">
             </div>
         </div>
 
-        <!--Youth Group Section-->
+        <!-- Group Events Section-->
         <div class="overview-section2">
              
             <div class="cycle-slideshow slideshow-container-left" 
@@ -113,7 +114,7 @@
             <div class="overview-text-container">
                 <div>
                     <h1>Group Events</h1><br>
-                    <p>Text</p>
+                    <p>Text about group events goes here</p>
                 </div>
             </div>
         </div>
